deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-tu-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-tu-deployment
  template:
    metadata:
      labels:
        app: go-tu-deployment
    spec:
      containers:
      - name: go-tu-deployment-application
        image: musashisakamoto/go-tu:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
