ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-tu-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: go-tu-cluster-ip
              servicePort: 80
